--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,13 @@ p {
   gap: 30px;
 }
 
+.header-right-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
 .button {
   background-color: aqua;
   border: none;
